# qgst-player

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenNetworkDialog.cpp  OpenNetworkDialog.h  OpenNetworkDialog.ui  main.cpp  player.cpp  player.h  videowidget.cpp  videowidget.h
